# humblebundle-downloader

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  commands.md  configuration.md  development.md  getting-started.md  keys.md  troubleshooting.md
src/humblebundle_downloader/: cli.py  config.py  downloader.py  humble_api.py  models.py  state.py
tests/: test_cli.py  test_downloader.py  test_humble_api.py  test_models.py  test_state.py
