[project]
name = "humblebundle-downloader"
version = "0.1.0"
description = "Bulk download DRM-free Humble Bundle files"
readme = "README.md"
authors = [
    { name = "Roy", email = "royvou@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "rich>=15.0.0",
    "typer>=0.25.1",
]

[project.scripts]
hb = "humblebundle_downloader.cli:main"
humblebundle-downloader = "humblebundle_downloader.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.ruff.lint.per-file-ignores]
"src/humblebundle_downloader/cli.py" = ["B008"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
